--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -1,1 +1,59 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>About - TechCon 2024</title></head><body><h1>About</h1><p>About TechCon 2024.</p></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About TechCon 2024</title>
+</head>
+<body>
+    <!-- Header -->
+    <header>
+        <h1>About TechCon 2024</h1>
+        <nav>
+            <a href="index.html">Home</a> |
+            <a href="schedule.html">Schedule</a> |
+            <a href="register.html">Register</a> |
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+
+    <!-- Main Content -->
+    <main>
+        <!-- History Section -->
+        <article>
+            <h2>History</h2>
+            <p>TechCon began over a decade ago as a small meetup of innovators. Since then, it has grown into one of the leading technology conferences in the world.</p>
+            <img src="history.jpg" alt="Historical photo of the first TechCon event" width="400">
+        </article>
+
+        <!-- Mission Section -->
+        <article>
+            <h2>Mission</h2>
+            <p>Our mission is to foster innovation, inspire collaboration, and drive advancements in technology for the betterment of society.</p>
+            <img src="mission.jpg" alt="Motivational image representing technology and innovation" width="400">
+        </article>
+
+        <!-- Past Speakers Section -->
+        <article>
+            <h2>Past Speakers</h2>
+            <p>Over the years, TechCon has hosted many influential voices in the tech industry.</p>
+            <section>
+                <h3>Jane Doe</h3>
+                <p>Jane is a pioneer in AI research, leading groundbreaking work in machine learning.</p>
+                <img src="jane_doe.jpg" alt="Photo of Jane Doe, AI researcher" width="200">
+            </section>
+            <section>
+                <h3>John Smith</h3>
+                <p>John's cybersecurity innovations have safeguarded millions of users from digital threats.</p>
+                <img src="john_smith.jpg" alt="Photo of John Smith, cybersecurity expert" width="200">
+            </section>
+        </article>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 TechCon. All rights reserved.</p>
+    </footer>
+</body>
+</html>
+
