--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -1,1 +1,55 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Schedule - TechCon 2024</title></head><body><h1>Schedule</h1><p>Event schedule coming soon.</p></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Schedule for TechCon 2024</title>
+</head>
+<body>
+
+<header>
+  <h1>Schedule for TechCon 2024</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="register.html">Register</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+
+<main>
+  <table>
+    <caption>Detailed Schedule of Events for TechCon 2024</caption>
+    <tr>
+      <th scope="col">Time</th>
+      <th scope="col">Session</th>
+      <th scope="col">Speaker</th>
+    </tr>
+    <tr>
+      <td>09:00 AM</td>
+      <td>Opening Keynote</td>
+      <td>Jane Doe</td>
+    </tr>
+    <tr>
+      <td>10:30 AM</td>
+      <td>AI in 2024</td>
+      <td>John Smith</td>
+    </tr>
+    <tr>
+      <td>01:00 PM</td>
+      <td>Cybersecurity Trends</td>
+      <td>Mary Johnson</td>
+    </tr>
+    <tr>
+      <td>03:00 PM</td>
+      <td>Future of Robotics</td>
+      <td>Alan Turing</td>
+    </tr>
+  </table>
+</main>
+
+<footer>
+  <p>copyright 2024 TechCon</p>
+</footer>
+
+</body>
+</html>
+
