--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -1,1 +1,46 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Register - TechCon 2024</title></head><body><h1>Register</h1><p>Registration form placeholder.</p></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Register for TechCon 2024</title>
+</head>
+<body>
+
+<header>
+  <h1>Register for TechCon 2024</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="schedule.html">Schedule</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+
+<main>
+  <form>
+    <label for="name">Full Name:</label>
+    <input type="text" id="name" name="name" required><br><br>
+
+    <label for="email">Email Address:</label>
+    <input type="email" id="email" name="email" required><br><br>
+
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" required><br><br>
+
+    <label for="confirm_password">Confirm Password:</label>
+    <input type="password" id="confirm_password" name="confirm_password" required><br><br>
+
+    <label>
+      <input type="checkbox" name="terms" required> I agree to the terms and conditions
+    </label><br><br>
+
+    <button type="submit">Register Now</button>
+  </form>
+</main>
+
+<footer>
+  <p>copyright 2024 TechCon</p>
+</footer>
+
+</body>
+</html>
+
