--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -1,1 +1,60 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Contact - TechCon 2024</title></head><body><h1>Contact</h1><p>Contact info placeholder.</p></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Contact Us</title>
+</head>
+<body>
+
+<header>
+  <h1>Contact Us</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="schedule.html">Schedule</a>
+    <a href="register.html">Register</a>
+  </nav>
+</header>
+
+<main>
+  <section>
+    <h2>Contact Information</h2>
+    <p>Email: <a href="mailto:email@example.com">email@example.com</a></p>
+    <p>
+      <a href="https://facebook.com" target="_blank">Facebook</a> |
+      <a href="https://twitter.com" target="_blank">Twitter</a> |
+      <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+    </p>
+  </section>
+
+  <section>
+    <h2>Conference Venue</h2>
+    <iframe 
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019225409043!2d-122.4194150846806!3d37.77492977975907!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809c2f4d6a0b%3A0xf9f1f6c6f69e2d!2sMoscone%20Center!5e0!3m2!1sen!2sus!4v1617740300000"
+      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+    </iframe>
+  </section>
+
+  <section>
+    <h2>Contact Us Form</h2>
+    <form>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required><br><br>
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required><br><br>
+
+      <label for="message">Message:</label><br>
+      <textarea id="message" name="message" rows="5" cols="30" required></textarea><br><br>
+
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+</main>
+
+<footer>
+  <p>copyright 2024 TechCon</p>
+</footer>
+
+</body>
+</html>
+
